Completed packet sync